--- a/submodule-one/pom.xml
+++ b/submodule-one/pom.xml
@@ -7,12 +7,12 @@
     <parent>
         <groupId>pl.project13.maven</groupId>
         <artifactId>git-commit-id-plugin</artifactId>
-        <version>2.1.10</version>
+        <version>${git-commit-id-version}</version>
     </parent>
 
     <groupId>pl.project13.maven</groupId>
     <artifactId>submodule-one</artifactId>
-    <version>2.1.10</version>
+    <version>${git-commit-id-version}</version>
 
     
 </project>
