--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,26 @@
 					<target>${java.target}</target>
 				</configuration>
 			</plugin>
+			
+			<plugin>
+				<artifactId>maven-antrun-plugin</artifactId>
+				<version>1.8</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<configuration>
+							<target>
+								<echo>root-dir: ${user.dir}</echo>
+								<echo>basedir: ${basedir}</echo>
+								<echo>project.basedir: ${project.basedir}</echo>
+							</target>
+						</configuration>
+						<goals>
+							<goal>run</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 		</plugins>
 	</build>
 </project>
