add debugging code for https://github.com/ktoso/maven-git-commit-id-plugin/issues/166

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,8 @@
 				<configuration>
 					<prefix>git</prefix>
 					<verbose>true</verbose>
+          <skipPoms>false</skipPoms>
+          <runOnlyOnce>true</runOnlyOnce>
 					<dotGitDirectory>${project.basedir}/.git</dotGitDirectory>
           <injectAllReactorProjects>true</injectAllReactorProjects>
 					<generateGitPropertiesFile>true</generateGitPropertiesFile>
