--- a/submodule-two/pom.xml
+++ b/submodule-two/pom.xml
@@ -6,12 +6,12 @@
 	<parent>
 		<groupId>pl.project13.maven</groupId>
 		<artifactId>git-commit-id-plugin</artifactId>
-		<version>0.0.1</version>
+		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 
 	<groupId>pl.project13.maven</groupId>
 	<artifactId>submodule-two</artifactId>
-	<version>0.0.1</version>
+	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<properties>
