--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 	</parent>
 
 	<groupId>pl.project13.maven</groupId>
-	<artifactId>git-commit-id-plugin</artifactId>
+	<artifactId>git-commit-id-plugin-debugging</artifactId>
 	<packaging>pom</packaging>
 
 	<version>0.0.1-SNAPSHOT</version>
