--- a/submodule-one/pom.xml
+++ b/submodule-one/pom.xml
@@ -5,7 +5,7 @@
 
 	<parent>
 		<groupId>pl.project13.maven</groupId>
-		<artifactId>git-commit-id-plugin</artifactId>
+		<artifactId>git-commit-id-plugin-debugging</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
 
