--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
@@ -12,7 +11,7 @@
 	<artifactId>git-commit-id-plugin-debugging</artifactId>
 	<packaging>pom</packaging>
 
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 
 	<name>Git Commit Id Plugin Maven Mojo Debugging</name>
 	<description>
@@ -36,7 +35,8 @@
 		<url>git@github.com:TheSnoozer/git-commit-id-debugging.git</url>
 		<connection>scm:git:git@github.com:TheSnoozer/git-commit-id-debugging.git</connection>
 		<developerConnection>scm:git:git@github.com:TheSnoozer/git-commit-id-debugging.git</developerConnection>
-	</scm>
+	  <tag>git-commit-id-plugin-debugging-0.0.1</tag>
+  </scm>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
