--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<artifactId>git-commit-id-plugin-debugging</artifactId>
 	<packaging>pom</packaging>
 
-	<version>0.0.1</version>
+	<version>0.0.2-SNAPSHOT</version>
 
 	<name>Git Commit Id Plugin Maven Mojo Debugging</name>
 	<description>
@@ -35,7 +35,7 @@
 		<url>git@github.com:TheSnoozer/git-commit-id-debugging.git</url>
 		<connection>scm:git:git@github.com:TheSnoozer/git-commit-id-debugging.git</connection>
 		<developerConnection>scm:git:git@github.com:TheSnoozer/git-commit-id-debugging.git</developerConnection>
-	  <tag>git-commit-id-plugin-debugging-0.0.1</tag>
+	  <tag>HEAD</tag>
   </scm>
 
 	<properties>
