update versions to the latest available

--- a/submodule-one/pom.xml
+++ b/submodule-one/pom.xml
@@ -8,7 +8,6 @@
 		<version>0.0.3-SNAPSHOT</version>
 	</parent>
 
-	<groupId>pl.project13.maven</groupId>
 	<artifactId>submodule-one</artifactId>
 	<version>0.0.3-SNAPSHOT</version>
 
@@ -52,6 +51,7 @@
 			</plugin>
 
 			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-antrun-plugin</artifactId>
 				<version>1.8</version>
 				<executions>
