sample configuration to run the plugin multiple times with different settings

--- a/submodule-one/pom.xml
+++ b/submodule-one/pom.xml
@@ -32,9 +32,24 @@
 				<version>${git-commit-id-version}</version>
 				<executions>
 					<execution>
+						<phase>validate</phase>
+						<id>get-the-git-infos-validate</id>
 						<goals>
 							<goal>revision</goal>
 						</goals>
+						<configuration>
+							<generateGitPropertiesFilename>${project.build.outputDirectory}/validate_git.properties</generateGitPropertiesFilename>
+						</configuration>
+					</execution>
+					<execution>
+						<phase>initialize</phase>
+						<id>get-the-git-infos-initialize</id>
+						<goals>
+							<goal>revision</goal>
+						</goals>
+						<configuration>
+							<generateGitPropertiesFilename>${project.build.outputDirectory}/initialize_git.properties</generateGitPropertiesFilename>
+						</configuration>
 					</execution>
 				</executions>
 				<configuration>
@@ -42,9 +57,9 @@
 					<verbose>true</verbose>
 					<skipPoms>false</skipPoms>
 					<!-- <runOnlyOnce>true</runOnlyOnce> -->
-					<reactorRootDir>${project.basedir}/../.git</reactorRootDir>
+					<dotGitDirectory>${project.basedir}/../.git</dotGitDirectory>
 					<injectAllReactorProjects>true</injectAllReactorProjects>
-					<generateGitPropertiesFile>false</generateGitPropertiesFile>
+					<generateGitPropertiesFile>true</generateGitPropertiesFile>
 					<!--<generateGitPropertiesFilename>${project.build.outputDirectory}/git.properties</generateGitPropertiesFilename>-->
 					<!--<generateGitPropertiesFilename>target/classes/git.properties</generateGitPropertiesFilename>-->
 				</configuration>
