--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.target>1.8</java.target>
 		<!--<git-commit-id-version>2.2.5</git-commit-id-version> -->
-		<git-commit-id-version>3.0.0</git-commit-id-version>
+		<git-commit-id-version>8.0.1-SNAPSHOT</git-commit-id-version>
 		<sonar.projectVersion>${project.version}-${git.branch}</sonar.projectVersion>
 		<git-commit-plugin-prefix>git</git-commit-plugin-prefix>
 	</properties>
@@ -102,8 +102,9 @@
 			<build>
 				<plugins>
 					<plugin>
-						<groupId>pl.project13.maven</groupId>
-						<artifactId>git-commit-id-plugin</artifactId>
+
+                                                <groupId>io.github.git-commit-id</groupId>
+                                                <artifactId>git-commit-id-maven-plugin</artifactId>
 						<version>${git-commit-id-version}</version>
 						<executions>
 							<execution>
@@ -135,7 +136,7 @@
 					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-antrun-plugin</artifactId>
-						<version>1.8</version>
+						<version>3.1.0</version>
 						<executions>
 							<execution>
 								<phase>package</phase>
